fix(stimpack): giant icon
* fix stimpack reset icon/button being too large

#2018

--- a/styles/mandar.css
+++ b/styles/mandar.css
@@ -4495,3 +4495,12 @@ img {
   display: flex;
   flex-direction: column;
 }
+
+.starwarsffg .resetMedical {
+  height: 20px;
+  display: flex;
+}
+
+.starwarsffg .resetMedical>i {
+  height: 14px;
+}
